--- a/src/app/mini-components/input-field/input-field.component.css
+++ b/src/app/mini-components/input-field/input-field.component.css
@@ -4,6 +4,6 @@
 input {
   height: 1.4rem !important;
   line-height: 1rem !important;
-  width: min-content !important;
+  width: fit-content !important;
   padding: 0;
 }
